--- a/front/src/assets/styles/Home.css
+++ b/front/src/assets/styles/Home.css
@@ -1,6 +1,7 @@
 #root {
     position: absolute;
     top: 0;
+    width: 100%;
 }
 
 main {
@@ -24,4 +25,31 @@ p {
     color: #000;
     font-size: 18px;
     font-weight: 400;
+}
+
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.charts-container {
+  flex: 3;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.charts-container-2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.key-data-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
