--- a/front/src/assets/styles/BarChart.css
+++ b/front/src/assets/styles/BarChart.css
@@ -1,33 +1,36 @@
 .yAxis {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-/* Conteneur principal */
 .activity {
-  width: 835px;
-  height: 320px;
+  width: 55vw;
+  height: 35vh;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centre horizontalement le contenu */
+  align-items: center;
 }
 
-/* Conteneur pour le titre et la légende */
+@media (min-width: 1440px) {
+  .activity {
+    width: 58vw;
+  }
+
+}
+
 .chart-header {
   display: flex;
-  justify-content: space-between; /* Espace entre le titre et la légende */
-  align-items: center; /* Aligne verticalement */
-  width: 100%; /* Prend toute la largeur du conteneur */
-  margin-bottom: 10px; /* Espace sous le conteneur */
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-/* Titre du graphique */
 .chart-title {
   margin: 0;
   font-size: 15px;
   text-align: left;
 }
 
-/* Style du tooltip */
 .custom-tooltip {
   background-color: #e60000;
   padding: 10px;
@@ -35,7 +38,6 @@
   border-radius: 5px;
 }
 
-/* Texte dans le tooltip */
 .tooltip-text {
   margin: 20px 0;
   color: white;
@@ -43,42 +45,37 @@
   font-weight: 500;
 }
 
-/* Légende */
 .recharts-default-legend {
-  justify-content: flex-end; /* Aligne la légende à droite */
+  justify-content: flex-end;
 }
 
-/* Conteneur de la légende personnalisée */
 .custom-legend {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%; 
-  margin-bottom: 10px; /* Espace entre la légende et le graphique */
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-/* Titre du graphique dans la légende */
 .custom-legend .chart-title {
   margin: 0;
   font-size: 15px;
   font-weight: bold;
 }
 
-/* Conteneur des éléments de la légende */
 .legend-items {
   display: flex;
   gap: 20px;
   margin-top: 5px;
 }
 
-/* Élément individuel de la légende */
 .legend-item {
   display: flex;
   align-items: center;
   font-size: 12px;
+  color: black;
 }
 
-/* Couleur de la légende */
 .legend-color {
   width: 10px;
   height: 10px;
