--- a/front/src/assets/styles/KeyData.css
+++ b/front/src/assets/styles/KeyData.css
@@ -1,38 +1,54 @@
 .key-data {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 3vh;
+}
+
+@media (min-width: 1440px) {
+  .key-data {
+    gap: 5vh;
   }
-  
+}
+
 .key-data-card {
-display: flex;
-align-items: center;
-background-color: #fbfbfb;
-border-radius: 10px;
-padding: 20px;
-width: 150px;
-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  background-color: #fbfbfb;
+  border-radius: 10px;
+  padding: 20px;
+  height: 8vh;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .key-data-icon {
-font-size: 30px;
-margin-right: 10px;
+  font-size: 30px;
+  margin-right: 10px;
 }
 
 .key-data-info {
-text-align: left;
+  text-align: left;
 }
 
 .key-data-value {
-font-size: 18px;
-font-weight: bold;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .key-data-label {
-font-size: 14px;
-color: #666;
+  font-size: 12px;
+  color: #666;
+}
+
+@media (min-width: 1440px) {
+  .key-data-value {
+    font-size: 18px;
+  }
+
+  .key-data-label {
+    font-size: 14px;
+  }
 }
 
 .key-data img {
-    width: 60px;
-}  
+  width: 60px;
+}
