--- a/front/src/assets/styles/LineChart.css
+++ b/front/src/assets/styles/LineChart.css
@@ -1,16 +1,30 @@
 .line-chart-container {
-  width: 258px;
-  height: max-content;
+  width: 17vw;
+  height: 24vh;
   max-width: 800px;
-  margin: 0 ;
+  margin: 0;
   background-color: #f00;
 }
 
-.chart-title {
-  text-align: center;
-  font-size: 18px;
+@media (min-width: 1440px) {
+  .line-chart-container {
+    width: 18vw;
+    height: 27vh;
+  }
+}
+
+.line-chart-container .chart-title {
+  font-size: 13px;
   margin-bottom: 10px;
+  margin-left: 10px;
   position: absolute;
   color: white;
   opacity: 0.5;
+  width: inherit;
+}
+
+@media (min-width: 1440px) {
+  .line-chart-container .chart-title {
+    font-size: 16px;
+  }
 }
