--- a/front/src/assets/styles/RadialBarChart.css
+++ b/front/src/assets/styles/RadialBarChart.css
@@ -1,8 +1,15 @@
 .radial-bar-chart-container {
   position: relative;
-  width: 258px;
-  height: max-content;
+  width: 17vw;
+  height: 24vh;
   background-color: #fbfbfb;
+}
+
+@media (min-width: 1440px) {
+  .radial-bar-chart-container {
+    width: 18vw;
+    height: 27vh;
+  }
 }
 
 .radial-bar-chart-container .chart-title {
@@ -11,9 +18,15 @@
   margin-bottom: 10px;
   position: absolute;
   top: 10px;
-  left: 50%;
+  left: 15%;
   transform: translateX(-50%);
   color: #000;
+}
+
+@media (min-width: 1440px) {
+  .radial-bar-chart-container .chart-title {
+    font-size: 20px;
+  }
 }
 
 .radial-bar-chart-center {
@@ -21,8 +34,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 150px;
-  height: 150px;
+  width: 11vw;
+  height: 14vh;
   background-color: #fff;
   border-radius: 50%;
   display: flex;
@@ -32,17 +45,34 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+@media (min-width: 1440px) {
+  .radial-bar-chart-center {
+    width: 12vw;
+    height: 17vh;
+  }
+}
+
 .radial-bar-chart-score {
-  font-size: 26px;
+  font-size: 18px;
   font-weight: 700;
   color: #000;
   margin: 0;
 }
 
 .radial-bar-chart-text {
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
   color: #666;
   margin: 0;
   text-align: center;
+}
+
+@media (min-width: 1440px) {
+  .radial-bar-chart-score {
+    font-size: 24px;
+  }
+
+  .radial-bar-chart-text {
+    font-size: 16px;
+  }
 }
